# alure

./: .dockerignore  .firebaserc  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  deploy-cloudrun.ps1  generate_license_keys.py  license_manager.py  run-local.bat
dashboard/: README.md  index.html  package-lock.json  package.json
dashboard/src/: App.css  App.tsx  index.css
docs/: architecture.md  roadmap.md  stack-evaluation.md
infra/: README.md  deploy-commands.md
sdk-python/: README.md  pyproject.toml
sdk-python/alure_sdk/: __init__.py  client.py  errors.py  receipt.py  storage.py  ui.py
sdk-python/examples/: client_app.py  client_app_TEST.py  client_app_modules.py  quickstart.py
sdk-rust/: Cargo.toml  README.md
sdk-rust/src/: client.rs  errors.rs  lib.rs  receipt.rs  storage.rs
server/: README.md  package-lock.json  package.json
server/openapi/: openapi.yaml
server/prisma/: schema.prisma
server/src/: app.module.ts  main.ts
server/src/auth/: auth.controller.ts  auth.guard.ts  auth.module.ts  auth.service.ts  auth.types.ts
server/src/common/: data.crypto.ts
server/src/licensing/: licensing.controller.ts  licensing.module.ts  licensing.service.ts  licensing.types.ts  receipt.ts
server/src/plans/: plans.controller.ts  plans.module.ts  plans.service.ts  plans.types.ts
server/src/projects/: projects.controller.ts  projects.service.ts  projects.types.ts
server/src/smtp/: smtp.controller.ts  smtp.crypto.ts  smtp.module.ts  smtp.service.ts  smtp.types.ts
server/src/storage/: storage.ts
server/src/updates/: updates.controller.ts  updates.module.ts  updates.service.spec.ts  updates.service.ts  updates.types.ts
server/test/: updates-download.e2e-spec.ts
