[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alure-sdk"
version = "0.1.0"
description = "Alure Python SDK for licensing and updates"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alure" }]
keywords = ["licensing", "updates", "sdk", "alure"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/alure-ai/alure"
Repository = "https://github.com/alure-ai/alure"
Issues = "https://github.com/alure-ai/alure/issues"

[tool.setuptools.packages.find]
where = ["."]
